@@ -1,3 +1,9 @@
+2006-11-17	Benedikt Meurer <benny@xfce.org>
+
+	* terminal/terminal-window.c: Apply patch from Nick Schermer
+	  <nick@xfce.org> to allow reordering of tabs with GTK+ 2.10.x.
+	  Bug #1974.
+
 2006-11-06	Benedikt Meurer <benny@xfce.org>
 
 	* configure.in.in, terminal/Makefile.am: Fix installation on case
